force-app/main/default/objects/Invoice_supporting_documents__c/Invoice_supporting_documents__c.object-meta.xml
<CustomObject>
    <label>Invoice supporting document</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Invoice_supporting_documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice supporting document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>