force-app/main/default/objects/Invoice_supporting_documents__c/fields/document_type__c.field-meta.xml
<CustomField>
    <fullName>document_type__c</fullName>
    <label>document type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bill of lading (marine vessels)</fullName>
            </value>
            <value>
                <fullName>railway bill</fullName>
            </value>
            <value>
                <fullName>airway bill</fullName>
            </value>
            <value>
                <fullName>invoice copy</fullName>
            </value>
            <value>
                <fullName>purchase order</fullName>
            </value>
            <value>
                <fullName>buyer acknowledgement</fullName>
            </value>
            <value>
                <fullName>delivery proof</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>Certificate of Inspection</fullName>
            </value>
            <value>
                <fullName>Marine / Shipping Insurance</fullName>
            </value>
            <value>
                <fullName>Delivery Order</fullName>
            </value>
            <value>
                <fullName>Notice of Assignment Signed</fullName>
            </value>
            <value>
                <fullName>Post Dating Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>