force-app/main/default/objects/Invoice_supporting_documents__c/fields/Document_Type_auto__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_auto__c</fullName>
    <formula>If( Map_Supporting_Doc__c != null, Text(Map_Supporting_Doc__r.Document_Type__c), Text(document_type__c))</formula>
    <label>Document Type (auto)</label>
    <type>Text</type>
</CustomField>