force-app/main/default/objects/Invoice_supporting_documents__c/fields/external_system_id__c.field-meta.xml
<CustomField>
    <fullName>external_system_id__c</fullName>
    <description>if there is value in the document that can be used to validate information in another system indicate it here.</description>
    <externalId>true</externalId>
    <label>external system id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>