force-app/main/default/objects/Invoice_supporting_documents__c/fields/Invoice_Finance_deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Finance Deal</label>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipLabel>Invoice supporting document</relationshipLabel>
    <relationshipName>Invoice_supporting_document</relationshipName>
    <type>Lookup</type>
</CustomField>