force-app/main/default/objects/Invoice_supporting_documents__c/fields/Map_Supporting_Doc__c.field-meta.xml
<CustomField>
    <fullName>Map_Supporting_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map Supporting Doc</label>
    <referenceTo>Map_Supporting_Doc__c</referenceTo>
    <relationshipLabel>Invoice supporting document</relationshipLabel>
    <relationshipName>Invoice_supporting_document</relationshipName>
    <type>Lookup</type>
</CustomField>