force-app/main/default/objects/Invoice_supporting_documents__c/fields/Supplier_Buyer_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map__c</fullName>
    <formula>Invoice_Finance_deal__r.supplier_buyer_map_name__c</formula>
    <label>Supplier Buyer Map</label>
    <type>Text</type>
</CustomField>